[gd_scene load_steps=6 format=3 uid="uid://bkhw1ioaujkxq"]

[ext_resource type="Script" path="res://modules/interaction/extras/interface/interaction_interface.gd" id="1_c0qir"]
[ext_resource type="Script" path="res://modules/interaction/extras/interface/interactable_name_view.gd" id="2_t5h5v"]
[ext_resource type="Script" path="res://modules/interaction/extras/interface/interactable_description_view.gd" id="3_dd7jy"]
[ext_resource type="Script" path="res://modules/interaction/extras/interface/interaction_list_view.gd" id="4_7da3b"]
[ext_resource type="PackedScene" uid="uid://cg5qiodeah552" path="res://modules/interaction/extras/interface/interaction_list_item_view.tscn" id="5_tvkg7"]

[node name="InteractionInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c0qir")
metadata/_edit_use_anchors_ = true

[node name="InteractableView" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = 35.0
offset_right = 28.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractableNameView" type="RichTextLabel" parent="InteractableView"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 24.0
bbcode_enabled = true
text = "[b][interactable_name][/b]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
script = ExtResource("2_t5h5v")

[node name="InteractableDescriptionView" type="RichTextLabel" parent="InteractableView"]
layout_mode = 0
offset_left = 180.0
offset_top = 150.0
offset_right = 500.0
offset_bottom = 230.0
bbcode_enabled = true
text = "[i][interactable_description][/i]"
fit_content = true
scroll_active = false
script = ExtResource("3_dd7jy")

[node name="InteractionListView" type="VBoxContainer" parent="InteractableView"]
layout_mode = 2
offset_top = 32.0
offset_right = 128.0
offset_bottom = 56.0
script = ExtResource("4_7da3b")
interaction_prompt_view = ExtResource("5_tvkg7")
metadata/_edit_use_anchors_ = true

[node name="InteractionListItemView (Example)" parent="InteractableView/InteractionListView" node_paths=PackedStringArray("data_holder", "input_key", "interaction_name") instance=ExtResource("5_tvkg7")]
process_mode = 4
layout_mode = 2
data_holder = NodePath("")
input_key = NodePath("")
interaction_name = NodePath("")
